fix: Align header and menu with same distance from screen top edge

--- a/src/index.scss
+++ b/src/index.scss
@@ -104,6 +104,7 @@ video {
   font-weight: 300;
   font-size: 3rem;
   line-height: 1;
+  margin-top: 0;
 }
 
 .docs-quote p,
@@ -320,7 +321,7 @@ video {
     position: fixed;
     top: 0;
     bottom: 0;
-    padding: 70px 30px;
+    padding: 4rem 2em;
     width: 270px;
     min-height: 100vh;
     border-right: 1px solid var(--docs-color-border);
